      \item \code{is.R()} is defunct.  Environment variable
      \env{_R_DEPRECATED_IS_R_} no longer has any effect.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The non-API and hidden entry points \code{Rf_setIVector},
      \code{Rf_setRVector} and \code{Rf_setSVector} have been removed.     
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check --as-cran} will compile C++ code with
      \code{-DR_NO_REMAP}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.0 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Functions \code{R_atof} and \code{R_strtod} declared in
      header \file{R_ext/Utils.h} are now documented in
      \sQuote{Writing R Extensions} and so formally part of the API.

      \item The non-API entry points \code{Rf_setSVector},
      \code{Rf_StringFalse}, \code{Rf_StringTrue} and
      \code{Rf_isBlankString} have been added to those reported by
      \command{R CMD check}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{as.numeric()}, \code{scan()}, \code{type.convert()}
      and other places which use the internal C function \code{R_strtod} now
      require a \emph{non-empty} digit sequence in a decimal or binary
      exponent.  This aligns with the C/POSIX standard for \code{strtod} and
      with \code{?NumericConstants}.

      \item \code{as.data.frame(m, make.names=NA)} now works correctly for
      a matrix \code{m} with \code{NA}'s in row names.

      \item The error message from \code{<POSIXlt>[["hour"]]} and similar
      now mentions \code{*[[, "hour"]]}, as wished for in \PR{17409} and
      proposed by \I{Michael Chirico}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{